semi-colon problem